<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Fragment Animation Example</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="age">Age :</string>
    <string name="height">Height :</string>
    <string name="btn_add">Add</string>
    <string name="weight">Weight :</string>
    <string name="no_data">No Data Present</string>
    <string name="no_name">Please Enter Name</string>
    <string name="no_age">Please Enter Age</string>
    <string name="no_height">Please Enter Height</string>
    <string name="no_weight">Please Enter Weight</string>
    <string name="success">Data Entered Successfully</string>
    <string name="btn_save">Save</string>


</resources>
