<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"

    android:layout_width="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_weight="9"
            android:id="@+id/tvName"
            android:text="@string/name"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:layout_weight="1"
            android:id="@+id/btnImage"
            android:src="@drawable/cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvAge"
            android:textSize="15sp"
            android:layout_margin="5dp"
            android:text="@string/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvWeight"
            android:layout_margin="5dp"
            android:text="@string/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_margin="5dp"
            android:id="@+id/tvHeight"
            android:text="@string/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>